syntax = "proto3";

option csharp_namespace = "Discounts.Service";

package addToCart;

// The request message for adding a discount to a cart.
message AddDiscountToCartRequest {
  string discount_code = 1;
  string cart_id = 2;
  string user_id = 3; // Add user_id field
}

// The response message for adding a discount to a cart.
message AddDiscountToCartResponse {
  bool success = 1;
  string message = 2;
}

// The discount service definition.
service AddDiscountToCartService {
  // RPC to add a discount to a cart.
  rpc AddDiscountToCart (AddDiscountToCartRequest) returns (AddDiscountToCartResponse);
}